[package]
name = "glissile"
description = "NAME SQUAT - A macro for generating GLSL source code"
repository = "https://github.com/vonforum/glissile"
version = "0.0.2"
authors = ["vonforum <vonforum@windowslive.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["glsl", "gl"]
categories = ["development-tools", "rendering"]

[lib]
proc_macro = true

[dependencies]
