[package]
name = "glissile"
description = "A basic glam-compatible fixed-point math library"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vonforum/glissile"
keywords = ["glam", "fixed-point", "math", "bevy"]
categories = ["game-development", "game-engines"]
readme = "README.md"

[features]
bevy_math = ["dep:bevy_math", "glam"]
glam = ["dep:glam"]
serde = ["dep:serde"]

[dependencies]
bevy_math = { version = "0.16.0", optional = true }
glam = { version = "0.30.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
